add search source support, add rpc error wrapper
